--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Transitive by TEMPLATED</title>
+		<title>GIT Multiusuario RAUL BARTUAL MARCO</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Transitive <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="index.html">GIT MULTIUSUARIO <span>por Raúl Bartual</span></a></div>
 				<a href="#menu" class="toggle"><span>Menu</span></a>
 			</header>
 
