cambios en el pie de pagina por RAUL

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 						</div>
 					</section>
 					<div class="copyright">
-						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a>. Video <a href="http://coverr.co/">Coverr</a>.
+						&copy; Diseñado por: <a href="https://templated.co/">RAUL BARTUAL</a>. Imagenes <a href="https://unsplash.com/">Unsplash</a>. Video <a href="http://coverr.co/">Coverr</a>.
 					</div>
 				</div>
 			</footer>
