--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">GIT MULTIUSUARIO <span>por Raúl Bartual</span></a></div>
+				<div class="logo"><a href="index.html">Metropolita <span>por Raúl Bartual</span></a></div>
 				<a href="#menu" class="toggle"><span>Menu</span></a>
 			</header>
 
@@ -36,10 +36,10 @@
 		-->
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
-					<h1>Transitive</h1>
-					<p>A full responsive, business-oriented HTML5/CSS3 template<br />
-					built by <a href="https://templated.co/">Templated</a> and released under the <a href="https://templated.co/license">Creative Commons</a>.</p>
-					<a href="#one" class="button special scrolly">Sí quiero</a>
+					<h1>Metropolita</h1>
+					<p>Acompáñanos en este viaje por los rincones de<br />
+					<a href="https://templated.co/">metrópolis</a> que seguro qu no conocias</p>
+					<a href="#one" class="button special scrolly">Sí, quiero.</a>
 				</div>
 			</section>
 
