--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="inner">
 					<h1>Metropolita</h1>
 					<p>Acompáñanos en este viaje por los rincones de<br />
-					<a href="https://templated.co/">metrópolis</a> que seguro qu no conocias</p>
+					<a id="b" href="https://templated.co/">metrópolis</a> que seguro qu no conocias</p>
 					<a href="#one" class="button special scrolly">Sí, quiero.</a>
 				</div>
 			</section>
